update using transaction
